# avrora_unior

avrora-simulation/junior_2dnav/: CMakeLists.txt  package.xml
avrora-simulation/junior_2dnav/config/: common_costmap.yaml  dagny_nav.yaml  global_costmap.yaml  local_costmap.yaml  local_planner.yaml  teb_local_planner.yaml
avrora-simulation/junior_2dnav/launch/: hector.launch  junior_hector.launch  rviz_config.launch
avrora-simulation/junior_2dnav/rviz/: junior_rviz.rviz
avrora-simulation/junior_2dnav/src/: message_to_tf.cpp  rect_laser.cpp  tf_broadcaster.cpp
avrora-simulation/junior_car/: CMakeLists.txt  package.xml
avrora-simulation/junior_car/config/: joint_names_junior_car.yaml
avrora-simulation/junior_car/launch/: district.launch  gazebo.launch  gazebo.launch~
avrora-simulation/junior_car/material/: box.material
avrora-simulation/junior_car/meshes/: base_link.STL  hokuyo_sensor.STL  kinect.stl  steer_link.STL  wheel.STL
avrora-simulation/junior_car/nodes/: cmd_vel_to_ackermann_drive.py
avrora-simulation/junior_car/urdf/: inertia.xacro  junior_car.gazebo.xacro  junior_car.transmission.xacro  junior_car.urdf.xacro
avrora-simulation/junior_car/world/: dist.world
avrora-simulation/junior_car_ackermann/: CMakeLists.txt  package.xml
avrora-simulation/junior_car_ackermann/src/: drive.cpp  drive_remap.cpp  steer.cpp
avrora-simulation/junior_car_control/: CMakeLists.txt  package.xml
avrora-simulation/junior_car_control/config/: junior_car.yaml
avrora-simulation/junior_car_control/launch/: junior_car_control.launch
